@@ -34,7 +34,6 @@
                         -XX:+UseG1GC
                         -Xlog:gc:./gc/gc.log
                         -XX:+PrintGCDetails
-                        -XX:+PrintGCDateStamps
                     </jvmArguments>
                     <fork>true</fork>
                 </configuration>
